Wed Nov 29 17:44:56 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/htdig.html: Add description of -v output.

Mon Nov 27 12:03:34 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/md5.cc: Added missing include of time.h

Fri Nov 24 00:56:01 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htsearch/Display.cc: Some extra debugging for scoring

Sun Nov 19 00:56:01 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/HtFile.cc (Request): Use opendir/readdir instead of
	scandir for generating directory listings on-the-fly.

	* htdoc/RELEASE.html: Write up release notes for 3.2.0b3.

	* htdoc/THANKS.html: Update list of contributors for 3.2.0b3 as
	current.

Fri Nov 17 14:52:37 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/acroconv.pl: Added external converter script to convert
	PDFs with acroread.

Mon Nov  6 12:13:13 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (GetLocal, GetLocalUser): move String definition
	out of while statement for AIX xlC compiler.

Mon Oct 30 21:50:02 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Server.h, htdig/Server.cc (push): Add newDoc paramter that
	will allow redirects (old docs) to be followed and not count
	against the maxDoc restrictions.

	* htdig/Retriever.cc (got_redirect): Use new parameter so we don't
	count against a server's max documents since it's a redirect.

	* htlib/nl_types.h: Add for systems missing this header file.

Sun Oct 29 21:36:51 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Updated per-server and per-URL fields to
	match code. I still have a "wish list" of additional attributes
	that should work this way eventually.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Sun Oct 22 17:13:08 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/HtWordList.h: Add missing include for stdlib.h needed for
	abort().
