@@ -1,3 +1,8 @@
+Wed Nov 29 18:00:15 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/Retriever.cc (parse_url): Remove undeclared "dup" variable,
+	add missing calls to words.Skip().
+
 Wed Nov 29 17:44:56 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/htdig.html: Add description of -v output.
